--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 						
 <!-- *************** Mi info *************************--><!-- *************** Mi info *************************--><!-- *************** Mi info *************************-->						
 							<footer class="settings-footer">
-								<img src="mi-logo.png" alt="Mi Logo" class="footer-logo">
+								<img src="logo2.png" alt="Mi Logo" class="footer-logo">
 								<p class="footer-text">
-									Desarrollado por WendoL Collection<br>
-									Versión 1.0
+									WendoL Collection
+								
 								</p>
 							</footer>						
 <!-- *************** Mi info *************************--><!-- *************** Mi info *************************--><!-- *************** Mi info *************************-->
