--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 								<li class="settings-item">🌴 Vacaciones</li>
 								<li class="settings-item">✅ Cierre de Turno</li>
 								<li class="settings-item">💶 Horas Extras</li>
+								<li class="settings-item disabled">ℹ️ Información</li> </ul>
 							</ul>
 						</main>
 						
