--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/sw.js')
+            navigator.serviceWorker.register('sw.js')
                 .then(registration => console.log('ServiceWorker registrado con éxito.'))
                 .catch(error => console.log('Fallo en el registro de ServiceWorker:', error));
         });
