--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <header id="app-header">
             <h1 class="header-title">📅 Calendario de Turnos</h1>
-            <button id="settings-button" class="header-button">Configuración</button>
+            <button id="settings-button" class="header-button">Ajustes</button>
         </header>
 
         <main id="calendar-view">
