--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<li class="settings-item">🎨 Turnos</li>
 								<li class="settings-item">🔄 Cuadrante</li>
 								<li class="settings-item">🌴 Vacaciones</li>
-								<li class="settings-item">✅ Cierre de Turno</li>
+								<li class="settings-item">✅ Dia de Cierre</li>
 								<li class="settings-item">💶 Horas Extras</li>
 								<li class="settings-item">📊 Estadísticas</li>
 								
@@ -283,7 +283,7 @@
     
     <header class="view-header">
         <button id="back-to-settings-from-closure-button" class="header-button">←</button>
-        <h1 class="header-title">Días de Cierre de Turno</h1>
+        <h1 class="header-title">Días de Cierre</h1>
     </header>
 
 <main id="shift-closure-container">
