--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 			
             <p id="login-error" class="error-message hidden"></p>
-		<!--	<button id="login-button" class="button-primary">Entrar</button>   -->	
+		<button id="login-button" class="button-primary">Entrar</button>   
             <p class="auth-switch">¿No tienes cuenta? <a href="#" id="show-register">Regístrate</a></p>
 			<p class="auth-switch forgot-password"><a href="#" id="forgot-password-link">¿Has olvidado tu contraseña?</a></p>
 			
@@ -667,3 +667,4 @@
 
 </body>
 </html>
+
