--- a/index.html
+++ b/index.html
@@ -471,11 +471,15 @@
 
 <!-- *************** ventana modal*************************-->
 <div id="day-modal" class="modal-backdrop hidden">
-    <div class="modal-content">
-        <header class="modal-header">
-            <h2 id="modal-date"></h2>
-            <button id="modal-close-button" class="header-button">×</button>
-        </header>
+    <div class="modal-content"> 
+	
+		<header class="modal-header">
+			<div class="modal-title-container">
+				<h2 id="modal-date"></h2>
+				<p id="modal-holiday-name" class="hidden"></p>
+			</div>
+			<button id="modal-close-button" class="header-button">×</button>
+		</header>
 		
 <main class="modal-body">
     <div id="modal-view-section">
