--- a/index.html
+++ b/index.html
@@ -273,11 +273,23 @@
     <header class="view-header">
         <button id="back-to-settings-from-quadrant-button" class="header-button">←</button>
         <h1 class="header-title">Mis Cuadrantes</h1>
+		
+		
+
+
+
+
     </header>
 
     <div class="add-button-container">
         <button id="add-new-quadrant-button" class="button-primary">+ Añadir nuevo cuadrante</button>
     </div>
+	
+		<div class="feature-notice">
+			<p>
+				<strong>¡Nueva función!</strong> Ahora puedes asignar <strong>varios turnos</strong> a un mismo día en tus cuadrantes. Simplemente pulsa "Asignar Turnos" al crear o editar un patrón.
+			</p>
+		</div>
 
     <main id="quadrant-list-container">
         <div class="active-quadrant-section">
@@ -611,12 +623,26 @@
 
 
 
+<!-- *************** NUEVO CUADRANTE *************************-->
+
+<div id="multi-shift-modal" class="modal-backdrop hidden">
+    <div class="modal-content">
+        <header class="modal-header">
+            <h2 id="multi-shift-modal-title">Asignar Turnos para Lunes</h2>
+        </header>
+        <main class="modal-body">
+            <div id="multi-shift-list">
+                </div>
+        </main>
+        <footer class="modal-footer">
+            <button id="cancel-multi-shift-button" class="action-button">Cancelar</button>
+            <button id="confirm-multi-shift-button" class="button-primary">Aceptar</button>
+        </footer>
+    </div>
+</div>
 
 
-
-
-
-
+<!-- *************** NUEVO CUADRANTE *************************-->
 
 
 
