--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
 		<div class="feature-notice">
 			<p>
 				<strong>¡Nueva función!</strong> Ahora puedes asignar <strong>varios turnos</strong> a un mismo día en tus cuadrantes. Simplemente pulsa "Asignar Turnos" al crear o editar un patrón.
+
+				
+			</br> </br> OJO esta sin probar. 
+			
 			</p>
 		</div>
 
@@ -695,3 +699,4 @@
 
 </body>
 </html>
+
