--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ en el calendario saldrá con una 🌴
 			
 							<footer class="settings-footer ">
 							
-								<img src="logo2.png" alt="Mi Logo" class="footer-logo">
+								<img src="logo.png" alt="Mi Logo" class="footer-logo">
 								<p class="footer-text">
 									© 2025
 									WendoL Collection  -  
@@ -753,3 +753,4 @@ en el calendario saldrá con una 🌴
 
 </body>
 </html>
+
